# PyCIL2

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  cleanup.py  fix_imports.py  main.py  pyproject.toml  reorganize.py  requirements.yaml  rmm_train.py  setup.py  trainer.py
convs/: ACL_buffer.py  cifar_resnet.py  conv_cifar.py  conv_imagenet.py  linears.py  memo_cifar_resnet.py  memo_resnet.py  resnet.py
exps/: __init__.py  acil.json  aper_finetune.json  beef.json  bic.json  der.json  ds-al.json  fetril.json  finetune.json  memo.json  pass.json  simplecil.json  ssre.json  tagfex.json
models/: .icarl.py.swo  .icarl.py.swp  acil.py  aper_finetune.py  base.py  beef_iso.py  bic.py  der.py  dsal.py  ewc.py  fetril.py  finetune.py  foster.py  gem.py  icarl.py  lwf.py  memo.py  pa2s.py  replay.py  rmm.py  simplecil.py  ssre.py  tagfex.py  wa.py
pycil2/: __init__.py  __main__.py  main.py  rmm_train.py  trainer.py
pycil2/convs/: readme.md  resnet.py  resnet_gn.py  ucir_cifar_resnet.py
pycil2/exps/: ewc.json  gem.json  icarl.json  podnet.json  replay.json  tagfex.json  wa.json
pycil2/models/: acil.py  aper_finetune.py  base.py  bic.py  coil.py  der.py  ewc.py  finetune.py  gem.py  icarl.py  podnet.py  replay.py  simplecil.py  tagfex.py  wa.py
pycil2/strategy/: base.py  beef_iso.py  dsal.py  ewc.py  fetril.py  finetune.py  foster.py  il2a.py  lwf.py  memo.py  pa2s.py  podnet.py  replay.py  rmm.py  ssre.py  tagfex.py  wa.py
pycil2/utils/: cfg.py  data.py  data_manager.py  factory.py  (+2 more)
utils/: autoaugment.py  data.py  data_manager.py  factory.py  inc_net.py
(+1 files in other folders)
