[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycil2"
version = "0.1.0"
description = "A Python package for Continual/Incremental Learning"
readme = "README.md"
authors = [
    {name = "PyCIL2 Team"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch >= 1.8.1",
    "torchvision >= 0.6.0",
    "tqdm",
    "numpy",
    "scipy",
    "quadprog",
    "POT",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pycil2"
"Bug Tracker" = "https://github.com/yourusername/pycil2/issues"

[project.scripts]
pycil2 = "pycil2.main:main"